# mmcesim

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/: SECURITY.md
.github/workflows/: build.yml  code-cov.yml  dispatch.yml  docker-image.yml  format.yml  run-mmcesim.yml
include/: _boost_config.h  cli_options.h  config.h  error_code.h  export.h  fmt.h  log.h  log_global.h  meta.h  read.h  simulate.h  style.h  term.h  utils.h  yaml.h
include/export/: alg.h  alg_line.h  alg_opt.h  calc.h  channel_graph.h  functions.h  keywords.h  lang.h  macro.h  shared_info.h  type.h  type_track.h  type_track_global.h  value_vec.h
include/mmcesim/: LS.alg  LS_support.alg  OMP.alg  OMPL.alg  Oracle_LS.alg  dependency.yaml  max_n.alg
include/mmcesim/copy/: channel.mmcesim-cpp  channel.mmcesim-m  dictionary.mmcesim-cpp  functions.mmcesim-cpp  header.mmcesim-cpp  header.mmcesim-m  header.mmcesim-py
include/mmcesim/sys/: README  random_RIS_BF.alg  random_active_BF.alg
include/mmcesim/tex/: simreport.cls
misc/: Doxyfile  doxygen_mainpage.md  format  release_note.md  version_bump.py
misc/doxygen-custom/: header.html
scripts/: mac_build_pack_arm.sh  mac_code_cov.sh  mac_config_cppflags_brew.sh  mac_config_cppflags_port.sh  mac_config_cppflags_tvj.sh  mac_trust_app.sh
src/: config.cpp  export.cpp  log.cpp  main.cpp  read.cpp  simulate.cpp  style.cpp  term.cpp
src/export/: alg.cpp  alg_line.cpp  calc.cpp  channel_graph.cpp  macro.cpp  type.cpp  type_track.cpp
test/: .gitignore  Example_Configuration.sim  MIMO.sim  MIMO_OMPL.sim  MIMO_Oracle_LS.sim  MIMO_real.sim  MIMO_wideband.sim  MIMO_wideband_offgrid.sim  MIMO_wideband_offgrid_LS.sim  README.md  alg.sim  demo.alg  single_RIS.sim  syntax_error.sim  test.cmake
test/armadillo/: auto_keyword.cpp
tools/compose/: README.md
tools/log/: CMakeLists.txt  README.md  log.cpp  log.h
tools/maintain/: CMakeLists.txt  README.md  maintain.cpp  maintain.h
